--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,8 @@
     <string name="gender">Gender</string>
     <string name="changePassword">Change password</string>
     <string name="save">Save</string>
+    <string name="changePphoto">Profile photo</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="messages">Messages</string>
