--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,9 @@
     <string name="changePassword">Change password</string>
     <string name="save">Save</string>
     <string name="changePphoto">Profile photo</string>
+    <string name="TittleChangePhoto"> Introduce URL: </string>
+    <string name="url"> URL... </string>
+    <string name="submit">Submit</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
