Search Layout Complete

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,10 @@
     <string name="nombreunico">nombreunico</string>
 
 
+    <!-- Strings Search fragment -->
+    <string name="search_hint">Search...</string>
+    <string name="cancel">Cancel</string>
+
+
+
 </resources>
