--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,8 @@
     <string name="TittleChangePhoto"> Introduce URL: </string>
     <string name="url"> URL... </string>
     <string name="submit">Submit</string>
+    <string name="currentPassword">Current Password</string>
+    <string name="newPassword">New Password</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
